--- a/Calculadora.html
+++ b/Calculadora.html
@@ -8,7 +8,7 @@
 
     <script src="main.js"></script>
 </head>
-<body>
+<body onkeyup="doKey(e)">
     <div class="container">
         <div class="calculator">
             <div class="display" data-testid=display>
